# embedded-universal-driver-baremental

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
sensor/: hmc5883l.c
sensor/inc/: hmc5883l.h
utility/I2C/: i2c_seq.c
utility/I2C/inc/: i2c_seq.h
